--- a/workspaceWEB/htmltest/WebContent/index.html
+++ b/workspaceWEB/htmltest/WebContent/index.html
@@ -20,10 +20,14 @@
 	
 	<br>사용자들은 naver.com까지만 기억할 수 있죠.
 	<br>이후의 경로들은 하이퍼링크를 통해 클릭만으로 갈 수 있도록 만들어야 합니다.
-	<br> <a href="htmltest2.html">텍스트관련 태그 연습HTML로 이동<br>(상대경로로 설정되었습니다.)</a>
-	<br> <a href="htmltest2.html">상대경로시
-	
-	<br> <a href="http://172.30.1.28:8888/htmltest/index.html"></a> 절대경로 
+
+
+	<br> <a href="htmltext.html">텍스트관련 태그 연습HTML로 이동<br>(상대경로로 설정되었습니다.)</a>
+	<br> <a href="table.html">테이블관련 태그 연습HTML로 이동</a>
+
+
+	<br><br> <a href="htmltext.html">상대경로시	
+	<br><br> <a href="http://172.30.1.28:8888/htmltest/index.html"></a> 절대경로 
 	실제 서비스시 이처럼 절대경로로 했다간 큰일합니다. 
 	왜냐하면 실제로 서버 올리면 ip주소가 바뀌거든요.
 	
