--- a/workspaceWEB/htmltest/WebContent/index.html
+++ b/workspaceWEB/htmltest/WebContent/index.html
@@ -21,9 +21,17 @@
 	<br>사용자들은 naver.com까지만 기억할 수 있죠.
 	<br>이후의 경로들은 하이퍼링크를 통해 클릭만으로 갈 수 있도록 만들어야 합니다.
 
+<br>------------------------------------------------------------------------------
 
 	<br> <a href="htmltext.html">텍스트관련 태그 연습HTML로 이동<br>(상대경로로 설정되었습니다.)</a>
-	<br> <a href="table.html">테이블관련 태그 연습HTML로 이동</a>
+	<br> <a href="table.html">테이블관련 태그 연습HTML로 이동(191226)</a>
+	<br> <a href="form191227.html">폼태그 연습(191227)</a>
+	<br> <a href="followform.html">폼태그 연습-따라만들어보기(옷쇼핑몰 회원가입)(191227)</a>
+	<br> <a href="followform2.html">폼태그 연습-따라만들어보기(네이버 회원가입)(191227)</a>
+
+
+<br>-------------------------------------------------------------------------------
+
 
 
 	<br><br> <a href="htmltext.html">상대경로시	
@@ -38,6 +46,7 @@
 	
 	<br> <a href="htmltest2.html">상대경로시
 	<br> <a href="https://www.naver.com/">절대경로시(# 타 서버의 웹사이트 들어갈 경우는 절대경로!)
+	
 	
 	
 	HTML 실습관련 자주 참고할 사이트입니다.
