DATE 191229 잊지않는다

--- a/HTML/basic-tag.html.html
+++ b/HTML/basic-tag.html.html
@@ -4,12 +4,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>HTML 문서의 BODY 속성의 정의</title>
 </head>
-<!-- 출처 : 웹프로그래밍디자인-33페이지-->
+
 <body bgcolor="yellow">
   <center>
  	<br>안녕하세요?
     <P>바탕화면 색상을 노란색으로 지정하였습니다.
-     </P>
+    </P>
+    <P>출처 : 웹프로그래밍디자인-33페이지
+    </p>
   </center>
 </body>
 </html>
