Date 200107 javascript 수업 4일차

--- a/workspaceWEB/Day200106_javascript03/WebContent/NewFile.html
+++ b/workspaceWEB/Day200106_javascript03/WebContent/NewFile.html
@@ -8,8 +8,8 @@
 	var arr2 = [191, 87, 361];
 	
 	console.log(arr.concat(arr2));
-	console.log(arr);
-	console.log(arr2);
+	console.log(arr);//원본들은 영향을 받지 않습니다.
+	console.log(arr2);//원본배열은 영향 안 받음.
 </script>
 </head>
 <body>
