--- a/workspaceWEB/Day200106_javascript03/WebContent/Prototype.html
+++ b/workspaceWEB/Day200106_javascript03/WebContent/Prototype.html
@@ -23,6 +23,8 @@ function Person(name, age){
 }
  한 것과 다를바 없다.
  그래서 prototype는 알아도 그만, 몰라도 그만급의, 계륵취급을 받는다. 안습...
+ HTML이 5버전으로 올라가면서 사용하지 말라는 태그들이 생기듯이 사라질 우려/권고는 아직 없는 상태.
+ 
  */
 
 
