--- a/workspaceWEB/Day200106_javascript03/WebContent/object03_String.html
+++ b/workspaceWEB/Day200106_javascript03/WebContent/object03_String.html
@@ -18,7 +18,10 @@
 
 	//split
 	var str2 = "JavaScript/is/Fun"
-	console.log(str2.split("/"));
+	console.log(str2.split("/"));// '/'를 기준으로 자르기(split) 실시.
+	
+	
+	
 	
 </script>
 </head>
